--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   Relative Path (internal link)
     <a href="about.html">About page</a>
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <a href="about.html" target="_blank"><img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay>"></a>
+  <a href="about.html" target="_blank"><img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay"></a>
 
 </body>
 </html>
